--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^4.4.5
   awesome_dialog: ^3.0.2
   lottie: ^2.3.0
+  smooth_page_indicator: ^1.0.1
 
 dev_dependencies:
   flutter_test:
