--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.8.0
   cloud_firestore: ^4.4.5
+  firebase_database: ^10.0.16
+  firebase_auth: ^4.3.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
